2017-12-06  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/81281
	* gcc.c-torture/execute/pr81281.c: New test.
	* gcc.dg/pr81281-1.c: New test.
	* gcc.dg/pr81281-2.c: New test.
	* g++.dg/ubsan/pr81281.C: New test.
	* g++.dg/ubsan/pr81281-aux.cc: New test.

2017-12-06  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/82646
	* gcc.dg/builtin-stringop-chk-1.c: Adjust.
	* gcc.dg/builtin-stringop-chk-9.c: New test.
	* g++.dg/ext/strncpy-chk1.C: Adjust.

2017-12-06  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/83075
	* gcc.dg/tree-ssa/strncat.c: New test.
	* gcc.dg/tree-ssa/strncpy-2.c: Same.

2017-12-06  Bin Cheng  <bin.cheng@arm.com>

	* g++.dg/graphite/pr41305.C: Refine test option.
	* gcc.dg/graphite/pr42205-1.c: Ditto.
	* gcc.dg/graphite/pr42205-2.c: Ditto.
	* gcc.dg/graphite/pr42211.c: Ditto.
	* gcc.dg/graphite/pr46185.c: Ditto.
	* gcc.dg/graphite/pr46966.c: Ditto.
	* gcc.dg/graphite/pr59817-1.c: Ditto.
	* gcc.dg/graphite/pr59817-2.c: Ditto.
	* gcc.dg/graphite/pr60740.c: Ditto.
	* gcc.dg/graphite/pr60785.c: Ditto.
	* gcc.dg/graphite/pr68715-2.c: Ditto.
	* gcc.dg/graphite/pr68715.c: Ditto.
	* gcc.dg/graphite/pr70045.c: Ditto.
	* gfortran.dg/graphite/pr14741.f90: Ditto.
	* gfortran.dg/graphite/pr40982.f90: Ditto.
	* gfortran.dg/graphite/pr42285.f90: Ditto.
	* gfortran.dg/graphite/pr42334-1.f: Ditto.
	* gfortran.dg/graphite/pr42334.f90: Ditto.
	* gfortran.dg/graphite/pr43349.f: Ditto.
	* gfortran.dg/graphite/pr59817.f: Ditto.

2017-12-06  Charles Baylis  <charles.baylis@linaro.org>

	* gcc.target/arm/addr-modes-float.c: Place dg-add-options after
	dg-require-effective-target.
	(ATTR): New define.
	(POST_STORE): Pass ATTR as 2nd argument.
	(POST_LOAD): Likewise.
	(POST_STORE_VEC): Likewise.
	* gcc.target/arm/addr-modes-int.c (ATTR): New define.
	(PRE_STORE): Pass ATTR as 2nd argument.
	(POST_STORE): Likewise.
	(PRE_LOAD): Likewise.
	(POST_LOAD): Likewise.
	* gcc.target/arm/addr-modes.h: 	(PRE_STORE): New parameter.
	(POST_STORE): Likewise.